# Django_Blog_Poetry

./: .gitignore  README.md  README.txt  build.sh  pyproject.toml  render.yaml  requirements.txt
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_blog_post_publish_c4286e_idx_and_more.py  0003_alter_post_slug.py  0004_comment_comment_blog_commen_created_0e6ed4_idx.py  0005_rename_update_comment_updated_comment_email.py  0006_post_tags.py
blog/static/css/: styles.css
blog/templates/: pagination.html
blog/templates/blog/: base.html  base_original.html
blog/templates/blog/post/: detail.html  latest_posts.html  list.html  post.html  search.html  share.html
blog/templatetags/: blog_tags.py
mysite/: .env-template  settings.py  urls.py
mysite/templates/mysite/: index.html
